opam-version: "2.0"
name: "modulectomy"
version: "0.1"
synopsis: "Visualize the size of your OCaml programs"
maintainer: "Gabriel Radanne <drupyog@zoho.com>"
authors: "Gabriel Radanne <drupyog@zoho.com>"
license: "ISC"
tags: "regex"
homepage: "https://github.com/Drup/modulectomy"
bug-reports: "https://github.com/Drup/modulectomy/issues"
depends: [
  "ocaml" {>= "4.02.0"}
  "jbuilder" {build}
  "owee"
  "js_of_ocaml-compiler"
  "tree_layout"
  "iter"
  "containers"
  "fpath"
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/Drup/modulectomy.git"
