opam-version: "2.0"
name: "modulectomy"
version: "0.1"
synopsis: "Dissect OCaml compiled programs, and weight their content"
maintainer: "Gabriel Radanne <drupyog@zoho.com>"
authors: "Gabriel Radanne <drupyog@zoho.com>"
license: "ISC"
tags: "regex"
homepage: "https://github.com/Drup/modulectomy"
bug-reports: "https://github.com/Drup/modulectomy/issues"
depends: [
  "ocaml" {>= "4.02.0"}
  "jbuilder" {build}
  "owee"
  "js_of_ocaml-compiler"
  "tree_layout"
  "iter"
  "containers"
  "fpath"
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/Drup/modulectomy.git"
