opam-version: "2.0"
name: "modulectomy"
version: "0.1"
synopsis: "Dissect OCaml compiled programs, and weight their content"
maintainer: "Gabriel Radanne <drupyog@zoho.com>"
authors: "Gabriel Radanne <drupyog@zoho.com>"
license: "ISC"
tags: "regex"
homepage: "https://github.com/Drup/modulectomy"
bug-reports: "https://github.com/Drup/modulectomy/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
  "owee" {>= "0.5"}
  "iter"
  "containers"
  "containers-data"
  "fpath"
  "tyxml"
  "tyre"
  "cmdliner" {>= "1.1.0"}
  "fmt"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
  ["sh" "-ex" "packaging/FreeBSD/create_package.sh"] {os = "freebsd"}
  ["sh" "-ex" "packaging/debian/create_package.sh"] {os-family = "debian"}
]
dev-repo: "git+https://github.com/Drup/modulectomy.git"
