(library
 (name lib)
 (public_name modulectomy)
 (wrapped false)
 (modules :standard \ main)
 (libraries
   owee
   modulectomy.tree_layout tyxml
   iter containers containers-data fpath
   tyre
 )
)
  

(executable
 (name main)
 (modules main)
 (public_name modulectomy)
 (libraries lib cmdliner)
)
