(library
 (name modulectomy)
 (public_name modulectomy)
 (modules :standard \ main)
 (libraries
   owee
   modulectomy.tree_layout tyxml
   iter containers containers-data fpath
   tyre fmt 
 )
 (flags (:standard (-w -27-26)))
 )
  

(executable
 (name main)
 (modules main)
 (public_name modulectomy)
 (libraries cmdliner modulectomy)
 (flags (:standard (-w -27-26)))
)
